--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/material": "^6.1.3",
     "@reduxjs/toolkit": "^2.2.8",
     "dom": "^0.0.3",
+    "i18next": "^23.16.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "router": "^1.3.8"
